--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ input[type="number"] {
 
 @layer base {
   body {
-    @apply min-h-full min-w-80 text-slate-800;
+    @apply min-h-full min-w-80 bg-gradient-to-br  from-violet-100 text-slate-800;
   }
 
   input {
